+++++++++++
Python News
+++++++++++

What's New in Python 3.2.4
==========================

*Release date: XX-XX-XXXX*

Core and Builtins
-----------------

- Issue #16345: Fix an infinite loop when ``fromkeys`` on a dict subclass
  received a nonempty dict from the constructor.

- Issue #16197: Update winreg docstrings and documentation to match code.
  Patch by Zachary Ware.

- Issue #14700: Fix buggy overflow checks when handling large precisions and
  widths in old-style and new-style formatting.

- Issue #6074: Ensure cached bytecode files can always be updated by the
  user that created them, even when the source file is read-only.

- Issue #14783: Improve int() docstring and switch docstrings for str(),
  range(), and slice() to use multi-line signatures.

- Issue #15379: Fix passing of non-BMP characters as integers for the charmap
  decoder (already working as unicode strings).  Patch by Serhiy Storchaka.

- Issue #13992: The trashcan mechanism is now thread-safe.  This eliminates
  sporadic crashes in multi-thread programs when several long deallocator
  chains ran concurrently and involved subclasses of built-in container
  types.

- Issue #15846: Fix SystemError which happened when using ast.parse in an
  exception handler on code with syntax errors.

- Issue #15761: Fix crash when PYTHONEXECUTABLE is set on Mac OS X.

- Issue #15801: Make sure mappings passed to '%' formatting are actually
  subscriptable.

- Issue #15726: Fix incorrect bounds checking in PyState_FindModule.
  Patch by Robin Schreiber.

- Issue #15604: Update uses of PyObject_IsTrue() to check for and handle
  errors correctly.  Patch by Serhiy Storchaka.

- Issue #13119: sys.stdout and sys.stderr are now using "\r\n" newline on
  Windows, as Python 2.

- Issue #14579: Fix CVE-2012-2135: vulnerability in the utf-16 decoder after
  error handling.  Patch by Serhiy Storchaka.

- Issue #15404: Refleak in PyMethodObject repr.
