@@ -10,6 +10,9 @@ What's New in Python 3.2.4
 Core and Builtins
 -----------------
 
+- Issue #8401: assigning an int to a bytearray slice (e.g. b[3:4] = 5) now
+  raises an error.
+
 - Issue #16345: Fix an infinite loop when ``fromkeys`` on a dict subclass
   received a nonempty dict from the constructor.
 
